fix(style): scrollbar color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,7 +96,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #529dff;
+  background: #0b7184;
   &:hover {
     background: #ff9452;
   }
